# compiler

./: .gitignore  Cargo.toml  README.md  compiler.sln
.github/workflows/: rust-test.yml
asm-derive/: Cargo.toml
asm-derive/src/: lib.rs
compile/: main.cpp  program.asm
compiler/: ast.cpp  ast.hpp  ast_nodes.cpp  ast_nodes.hpp  compiler.cpp  compiler.hpp  compiler.vcxproj  compiler.vcxproj.filters  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantics.cpp  semantics.hpp  simulator.cpp  simulator.hpp  tac.cpp  tac.hpp  tac_visitor.cpp  tac_visitor.hpp  test_compiler.cpp  test_unary.cpp  type.hpp  variable_resolution.cpp  variable_resolution.hpp
cpp/: .gitignore  README.md  compiler.sln
cpp/compile/: compile.vcxproj  main.cpp
rust/: Cargo.toml
rust/src/: ast.rs  common.rs  compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  tac.rs  tac_visitor.rs  variable_resolution.rs
rust/tests/: simulator.rs  test_binary.rs  test_compiler.rs
src/: asm_ast.rs  ast.rs  common.rs  compiler.rs  errors.rs  lexer.rs  lib.rs  parser.rs  tac.rs  tac_generator.rs  tac_visitor.rs  type_check.rs  variable_resolution.rs
tests/: simulator.rs  test_assignment.rs  test_binary.rs  test_block.rs  test_booleans.rs  test_compiler.rs  test_condition.rs  test_function.rs  test_long.rs  test_loops.rs  test_storage_class.rs  test_unary.rs  test_unsigned.rs
unit_tests/: test_assignment.cpp  test_binary.cpp  test_block.cpp  test_booleans.cpp  test_compiler.cpp  test_condition.cpp  test_loops.cpp  test_unary.cpp  unit_tests.vcxproj  unit_tests.vcxproj.filters
(+20 files in other folders)
