[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
asm-derive = { path = './asm-derive' }

[dev-dependencies]
rstest = "0.25.0"
winapi = { version = "0.3", features = [
    "winnt",
    "libloaderapi",
    "processthreadsapi",
    "fileapi",
    "errhandlingapi",
    "minwindef"
] }
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }

[profile.dev]
incremental = true

[profile.test]
incremental = true
